# galaxy3d

./: CMakeLists.txt  README.md  main.c  memory.c  memory.h  objloader.c  objloader.h  shader.c  shader.h  tinyobj_loader_c.h
models/: alien.blend  alien.mtl  fighter.blend  fighter.mtl
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
